section slider + jquery

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="css/normalize.css" />
+    <link rel="stylesheet" href="css/slick.css" />
+    <link rel="stylesheet" href="css/slick-theme.css" />
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
@@ -50,5 +52,108 @@
         </div>
       </div>
     </header>
+    <section class="slider">
+      <div class="container">
+        <div class="slider__inner">
+          <div class="slider__item">
+            <div class="slider__item-text">
+              We design clean, crisp & memorable icons
+            </div>
+          </div>
+
+          <div class="slider__item">
+            <div class="slider__item-text">
+              We design clean, crisp & memorable icons
+            </div>
+          </div>
+
+          <div class="slider__item">
+            <div class="slider__item-text">
+              We design clean, crisp & memorable icons
+            </div>
+          </div>
+
+          <div class="slider__item">
+            <div class="slider__item-text">
+              We design clean, crisp & memorable icons
+            </div>
+          </div>
+
+          <div class="slider__item">
+            <div class="slider__item-text">
+              We design clean, crisp & memorable icons
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="items">
+      <div class="container">
+        <div class="items__inner">
+          <div class="item">
+            <div class="item__title">
+              <div class="item__icons">
+                <img src="#" />
+              </div>
+              Clean Theme
+            </div>
+            <div class="item__text">
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptas
+              earum quis placeat saepe facilis cumque ratione dolorem tempore
+              eius laudantium!
+            </div>
+            <a class="item__link" href="#">Read more</a>
+          </div>
+
+          <div class="item">
+            <div class="item__title">
+              <div class="item__icons">
+                <img src="#" />
+              </div>
+              Clean Theme
+            </div>
+            <div class="item__text">
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptas
+              earum quis placeat saepe facilis cumque ratione dolorem tempore
+              eius laudantium!
+            </div>
+            <a class="item__link" href="#">Read more</a>
+          </div>
+
+          <div class="item">
+            <div class="item__title">
+              <div class="item__icons">
+                <img src="#" />
+              </div>
+              Clean Theme
+            </div>
+            <div class="item__text">
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptas
+              earum quis placeat saepe facilis cumque ratione dolorem tempore
+              eius laudantium!
+            </div>
+            <a class="item__link" href="#">Read more</a>
+          </div>
+
+          <div class="item">
+            <div class="item__title">
+              <div class="item__icons">
+                <img src="#" />
+              </div>
+              Clean Theme
+            </div>
+            <div class="item__text">
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptas
+              earum quis placeat saepe facilis cumque ratione dolorem tempore
+              eius laudantium!
+            </div>
+            <a class="item__link" href="#">Read more</a>
+          </div>
+        </div>
+      </div>
+    </section>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="js/slick.min.js"></script>
+    <script src="js/main.js"></script>
   </body>
 </html>
