sections items+works, jquery

--- a/index.html
+++ b/index.html
@@ -93,14 +93,15 @@
           <div class="item">
             <div class="item__title">
               <div class="item__icons">
-                <img src="#" />
+                <img src="images/icons/item-1.svg" />
               </div>
-              Clean Theme
+              clean theme
             </div>
             <div class="item__text">
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptas
-              earum quis placeat saepe facilis cumque ratione dolorem tempore
-              eius laudantium!
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+              Veritatis optio voluptate quidem, quaerat officia libero nobis
+              delectus provident unde quam numquam qui, commodi voluptatem quis
+              porro repellat dolores, necessitatibus non.
             </div>
             <a class="item__link" href="#">Read more</a>
           </div>
@@ -108,14 +109,15 @@
           <div class="item">
             <div class="item__title">
               <div class="item__icons">
-                <img src="#" />
+                <img src="images/icons/item-2.svg" />
               </div>
-              Clean Theme
+              responsive design
             </div>
             <div class="item__text">
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptas
-              earum quis placeat saepe facilis cumque ratione dolorem tempore
-              eius laudantium!
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Architecto porro debitis harum sed assumenda eveniet dolores.
+              Incidunt provident, mollitia ullam, ex autem odit quaerat ipsam
+              illum cumque quidem magni tempora?
             </div>
             <a class="item__link" href="#">Read more</a>
           </div>
@@ -123,14 +125,15 @@
           <div class="item">
             <div class="item__title">
               <div class="item__icons">
-                <img src="#" />
+                <img src="images/icons/item-3.svg" />
               </div>
-              Clean Theme
+              fully layerd psd
             </div>
             <div class="item__text">
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptas
-              earum quis placeat saepe facilis cumque ratione dolorem tempore
-              eius laudantium!
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maiores
+              esse eos nesciunt hic nihil odit eveniet iusto sunt cupiditate
+              quisquam, voluptatibus itaque assumenda, accusantium sed maxime
+              qui vel exercitationem! Temporibus.
             </div>
             <a class="item__link" href="#">Read more</a>
           </div>
@@ -138,19 +141,94 @@
           <div class="item">
             <div class="item__title">
               <div class="item__icons">
-                <img src="#" />
+                <img src="images/icons/item-4.svg" />
               </div>
-              Clean Theme
+              ready for coding
             </div>
             <div class="item__text">
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptas
-              earum quis placeat saepe facilis cumque ratione dolorem tempore
-              eius laudantium!
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus,
+              iste, ratione suscipit debitis quibusdam, omnis accusamus aut hic
+              ad in minus nisi fugiat aliquid corrupti perspiciatis doloremque
+              necessitatibus libero quas.
             </div>
             <a class="item__link" href="#">Read more</a>
           </div>
         </div>
       </div>
+    </section>
+    <section class="works">
+      <div class="container">
+        <div class="works__title">latest works</div>
+        <div class="works__inner">
+        <div class="works__inner-item">        
+           <div class="works__inner-box">
+            <img src="/images/sliders/item-1.jpg" alt="" />
+            <div class="works__inner-link">
+              <a href="#"><img src="/images/sliders/optic.svg" alt=""></a>
+              <a href="#"><img src="/images/sliders/link.svg" alt=""></a>
+            </div>
+           </div>
+        </div>
+        <div class="works__inner-item">        
+           <div class="works__inner-box">
+            <img src="/images/sliders/item-2.jpg" alt="" />
+            <div class="works__inner-link">
+              <a href="#"><img src="/images/sliders/optic.svg" alt=""></a>
+              <a href="#"><img src="/images/sliders/link.svg" alt=""></a>
+            </div>
+           </div>
+        </div><div class="works__inner-item">        
+           <div class="works__inner-box">
+            <img src="/images/sliders/item-3.jpg" alt="" />
+            <div class="works__inner-link">
+              <a href="#"><img src="/images/sliders/optic.svg" alt=""></a>
+              <a href="#"><img src="/images/sliders/link.svg" alt=""></a>
+            </div>
+           </div>
+        </div><div class="works__inner-item">        
+           <div class="works__inner-box">
+            <img src="/images/sliders/item-4.jpg" alt="" />
+            <div class="works__inner-link">
+              <a href="#"><img src="/images/sliders/optic.svg" alt=""></a>
+              <a href="#"><img src="/images/sliders/link.svg" alt=""></a>
+            </div>
+           </div>
+        </div>
+        <div class="works__inner-item">        
+           <div class="works__inner-box">
+            <img src="/images/sliders/item-1.jpg" alt="" />
+            <div class="works__inner-link">
+              <a href="#"><img src="/images/sliders/optic.svg" alt=""></a>
+              <a href="#"><img src="/images/sliders/link.svg" alt=""></a>
+            </div>
+           </div>
+        </div>
+        <div class="works__inner-item">        
+           <div class="works__inner-box">
+            <img src="/images/sliders/item-2.jpg" alt="" />
+            <div class="works__inner-link">
+              <a href="#"><img src="/images/sliders/optic.svg" alt=""></a>
+              <a href="#"><img src="/images/sliders/link.svg" alt=""></a>
+            </div>
+           </div>
+        </div><div class="works__inner-item">        
+           <div class="works__inner-box">
+            <img src="/images/sliders/item-3.jpg" alt="" />
+            <div class="works__inner-link">
+              <a href="#"><img src="/images/sliders/optic.svg" alt=""></a>
+              <a href="#"><img src="/images/sliders/link.svg" alt=""></a>
+            </div>
+           </div>
+        </div><div class="works__inner-item">        
+           <div class="works__inner-box">
+            <img src="/images/sliders/item-4.jpg" alt="" />
+            <div class="works__inner-link">
+              <a href="#"><img src="/images/sliders/optic.svg" alt=""></a>
+              <a href="#"><img src="/images/sliders/link.svg" alt=""></a>
+            </div>
+           </div>
+        </div>
+        </div>
     </section>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="js/slick.min.js"></script>
