--- a/index.html
+++ b/index.html
@@ -230,6 +230,35 @@
         </div>
         </div>
     </section>
+    <section class="clients">
+      <div class="container">
+        <div class="clients__inner">
+          <div class="testimonials">
+            <div class="testimonials__title">
+              Testimonials
+            </div>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat animi quae quasi amet non nesciunt exercitationem numquam repudiandae architecto! Est, consequuntur. Qui dolor corrupti vitae fugiat itaque culpa nulla? Totam.<span>John Travis, CEO, DomainName.com</span></p>
+          </div>
+          <div class="clients__logo">
+            <div class="clients__logo-title">
+              Our clients
+            </div>
+            <div class="clients__logo-images">
+              <img src="./images/testimonials/client-logo.jpg" alt="">
+            </div>
+          </div>
+        </div>
+        <div class="download">
+          <div class="download__text">This is a clean and modern, four column website PSD template.
+                You can code it into a Wordpress website, HTML5 responsive website for your personal or client
+                works. So ahead and download this
+                wonderful PSD template!</div>
+          <div class="download__btn">
+            <a href="#" download="">Download psd</a>
+          </div>
+        </div>
+      </div>
+    </section>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="js/slick.min.js"></script>
     <script src="js/main.js"></script>
