--- a/index.html
+++ b/index.html
@@ -259,6 +259,71 @@
         </div>
       </div>
     </section>
+    <footer class="footer">
+      <div class="container">
+        <div class="footer__inner">
+
+          <div class="footer__item footer__item-content">
+            <div class="footer__item-title">About us</div>
+            <div class="footer__item-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Provident recusandae, voluptatum praesentium ducimus aspernatur labore ab ex est accusantium voluptate laudantium delectus. Quo aliquid a, pariatur rerum optio provident magni!</div>
+          </div>
+          
+          <div class="footer__item footer__item-list">
+            <div class="footer__item-title">Explore</div>
+            <ul class="footer__list">
+              <li><a href="#">Home</a></li>
+              <li><a href="#">About Us</a></li>
+              <li><a href="#">Services</a></li>
+              <li><a href="#">Portfolio</a></li>
+              <li><a href="#">Blog</a></li>
+            </ul>
+          </div>
+
+          <div class="footer__item">
+            <div class="footer__item-title">Browse</div>
+            <ul class="footer__list">
+              <li><a href="#">Careers</a></li>
+              <li><a href="#">Press & Media</a></li>
+              <li><a href="#">Contact Us</a></li>
+              <li><a href="#">Terms of Service</a></li>
+              <li><a href="#">Privacy Policy</a></li>
+            </ul>
+          </div>
+
+          <div class="footer__item footer__item-contact">
+            <div class="footer__item-title">Contact us</div>
+            <div class="footer__adress">
+              <span>BisLite Inc.</span>
+              Always Street 265
+              0X - 125 - Canada
+            </div>
+            <div class="footer__phone">
+              Phone: <a href="tel:9876543210">987-6543-210</a>
+              Fax: 987-6543-210
+            </div>
+          </div>
+          
+          <div class="footer__item footer__item-social">
+            <div class="footer__item-title">Connect with us</div>
+            <ul class="footer__social">
+              <li><a href="#"><img src="images/social/item-1.png" alt=""></a></li>
+              <li><a href="#"><img src="images/social/item-2.png" alt=""></a></li>
+              <li><a href="#"><img src="images/social/item-3.png" alt=""></a></li>
+              <li><a href="#"><img src="images/social/item-4.png" alt=""></a></li>
+              <li><a href="#"><img src="images/social/item-5.png" alt=""></a></li>
+              <li><a href="#"><img src="images/social/item-6.png" alt=""></a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="footer__bottom">
+          <div class="footer__copy">© Copyright 2012 - BisLite Inc. All rights reserved. Some free icons used here are created by Brankic1979.com. Client Logos are copyright and trademark of the respective owners / companies.              
+          </div>
+          <div class="footer__logo">
+            <a href="#"> <span>Bis</span>Lite </a>
+          </div>
+        </div>
+      </div>
+    </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="js/slick.min.js"></script>
     <script src="js/main.js"></script>
